# nettlesome

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  changelog.md  changelog.rst  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: conf.py  index.rst
docs/api/: assertions.rst  comparable.rst  comparisons.rst  doctrines.rst  entities.rst  explanations.rst  factors.rst  groups.rst  predicates.rst  quantities.rst  schemas.rst  spec.rst  statements.rst  terms.rst
docs/guides/: context.rst  intro.rst  serializing.rst
docs/history/: releases.rst
nettlesome/: __init__.py  assertions.py  comparable.py  dicta.py  doctrines.py  entities.py  explanations.py  factors.py  formatting.py  groups.py  predicates.py  quantities.py  schemas.py  spec.py  statements.py  terms.py  units.py
notebooks/: context.ipynb  examples.ipynb  intro.ipynb  serializing.ipynb
tests/: conftest.py  test_assertions.py  test_comparisons.py  test_context.py  test_dicta.py  test_docs.py  test_doctrines.py  test_entities.py  test_explanations.py  test_facts.py  test_groups.py  test_predicates.py  test_quantities.py  test_schemas.py  test_spec.py  test_statements.py  test_terms.py  text_groups.py  text_statements.py
