[project]
name = "nettlesome"
version = "0.8.0"
description = "Simplified semantic reasoning in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pint>=0.25.3",
    "pydantic>=2.13.3",
    "python-slugify>=8.0.4",
    "sympy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "pytest>=9.0.3",
]
