[metadata]

name = nettlesome
version = 0.6.1
author= Matt Carey
author_email = matt@authorityspoke.com
description = simplified semantic reasoning
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/mscarey/nettlesome
project_urls =
    Bug Tracker = https://github.com/mscarey/nettlesome/issues
    Documentation = https://nettlesome.readthedocs.io/en/latest/
classifiers =
    Development Status :: 3 - Alpha
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Natural Language :: English

[options]

packages = find:
python_requires = >=3.8

[pydocstyle]

add-ignore=D105,D202,D301

[flake8]

ignore = E121, E122, E124, E126, E128, E203, E302, E303, E501, E902, F821, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    html,
    htmlcov,
    notebooks,
    prof,
max-complexity = 10

[mypy]
new_semantic_analyzer = True

[pylint]
ignore = E0239